--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="option_exit">Exit</string>
     <string name="enter_name">Enter your name:</string>
+    <string name="scores_title">Rank </string>
 
 </resources>
