--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <string name="app_name">PuzzleGame</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="music_on">Music On </string>
+    <string name="music_off">Music Off</string>
     <string name="option_exit">Exit</string>
     <string name="enter_name">Enter your name:</string>
     <string name="scores_title">Rank </string>
